# sdk

./: .gitignore  .npmrc  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.cts  eslint.config.mjs  nx.json  package-lock.json  package.json
.cursor/rules/: nx-rules.mdc
.github/workflows/: cd.yml  ci.yml  publish.yml  release.yml  update-openapi-types.yml
e2e/e2e-node-cjs/: package.json  project.json  vitest.config.mjs
e2e/e2e-node-cjs/test/: live_v2_job_management.test.cjs  live_v2_session.test.cjs  prerecorded_v2_async.test.cjs
e2e/e2e-node-esm/: README.md  package.json  project.json  vitest.config.ts
e2e/e2e-node-esm/test/: live_v2_job_management.test.ts  live_v2_session.test.ts  prerecorded_v2_async.test.ts
e2e/e2e-python/: project.json  pyproject.toml
e2e/e2e-python/tests/: helpers.py  test_live_v2_async_session.py  test_live_v2_job_management.py  test_live_v2_session.py  test_prerecorded_v2_async.py
e2e/javascript-fixtures/: README.md  package.json  project.json  tsdown.config.ts
e2e/javascript-fixtures/src/: index.ts
e2e/node-cjs/: README.md  package.json  project.json
e2e/node-cjs/test/: split_infinity.test.cjs
e2e/node-esm/: project.json
e2e/node-esm/test/: live_v2_session.test.ts  split_infinity.test.ts
e2e/python/: README.md  project.json  pyproject.toml
e2e/python/tests/: helpers.py  test_live_v2_async_session.py
samples/javascript/: package.json  project.json  tsconfig.json
samples/javascript/src/live/: helpers.ts  live-from-file.ts  live-from-microphone.ts  types.ts
tools/scripts/: publish.mjs  release.mjs
